# adventofcode

./: README.md  day-10.py  day-11.py  day-12.py  day-13.py  day-15.py  day-3.py  day-5.py  day-6.py  day-7.py  day-8.py  day-9.py  test.py
2015/: advent2015.py
2019/: Makefile  day1.c  day2.c  day3.c  main.c  utils.c  utils.h
2019/code/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  19.c  2.c  3.c  4.c  5.c  6.c  (+8 more)
2021/: .gitignore  Makefile  README.md  day1.c  day10.c  day11.c  day13.c  day14.c  day15.c  day16.c  day17.c  day18.c  day19.c  day2.c  day20.c  day21.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c  measurer.c
2023/: .gitignore  Cargo.toml  README.md  test.txt
2023/input/: test_day1.txt
2023/src/: main.rs
2023/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2023/src/etc/: mod.rs
2024/: Makefile  README.md
2025/: .gitignore  Makefile  README.md
day-1/: day-1.py
day-10/: day-10.py
day-11/: day-11.py  day-11.txt
day-12/: day-12.py
day-13/: day-13.py
day-14/: day-14.py
day-15/: day-15.py
day-16/: day-16.py
day-17/: day-17.py
day-18/: day-18.py
day-19/: day-19.py
day-2/: day-2.py
day-21/: day-21.py
day-22/: day-22.py
day-24/: day-24.py
day-25/: day-25.py
day-3/: day-3.py
day-4/: day-4.py
day-6/: day-6.py
day-7/: day-7.py
day-8/: day-8.py
day-9/: day-9.py
src/: day1.rs  main.rs
(+55 files in other folders)
