[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.12"
itertools = "0.12.0"
num = "0.4.1"
rustc-hash = "1.1.0"
slotmap = "1.0.7"
rayon = "1.8.0"
cached = { version = "0.46.1", features = ["ahash"] }

[profile.dev]
strip = false
debug = true
